--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,7 +152,7 @@ input, select, textarea {
 		}
 
 	h2 {
-		font-size: 1.75em;
+		font-size: 4em;
 	}
 
 	h3 {
@@ -2752,6 +2752,7 @@ input, select, textarea {
 
 		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
 			color: #ffffff;
+			font-size: 3em;
 		}
 
 		#header input[type="submit"],
@@ -2763,7 +2764,7 @@ input, select, textarea {
 		}
 
 		#header .logo {
-			background: #4eb980;
+			background: #163625;
 			border-radius: 100%;
 			color: #ffffff;
 			cursor: default;
@@ -2796,7 +2797,7 @@ input, select, textarea {
 
 	#footer {
 		background-attachment: scroll;
-		background-color: #4eb980;
+		background-color: #163625;
 		background-image: url("images/bottom-3200.svg");
 		background-position: top center;
 		background-repeat: repeat-x;
@@ -2933,7 +2934,7 @@ input, select, textarea {
 		/* Basic */
 
 			body, input, select, textarea {
-				font-size: 14pt;
+				font-size: 15pt;
 			}
 
 			h2 {
