--- a/html5-boilerplate_v8.0.0/css/main.css
+++ b/html5-boilerplate_v8.0.0/css/main.css
@@ -16,6 +16,7 @@ html {
   font-size: 1em;
   line-height: 1.4;
   font-family: 'Spline Sans Mono', monospace;
+ 
 }
 
 /*
@@ -38,6 +39,14 @@ html {
   text-shadow: none;
 }
 
+body {
+  width: 90%;
+  margin: auto;
+}
+.social-links {
+  max-height: 400px;
+  display:flex;
+}
 /*
  * A better looking default horizontal rule
  */
